--- a/pa/units/addon/andreas/andreas.json
+++ b/pa/units/addon/andreas/andreas.json
@@ -88,9 +88,7 @@
             "audio_cue": "/SE/Build_Complete/orbital"
         },
         "fired": {
-            "audio_cue": "/SE/Weapons/orb/orb_ssx_laser_fire",
-            "effect_spec": "/pa/units/orbital/orbital_laser/orbital_laser_muzzle_flash.pfx socket_muzzle",
-            "effect_scale": 1
+            "audio_cue": "/SE/Weapons/orb/defense_satellite_fire"
         },
         "died": {
             "audio_cue": "/SE/Death/orbital",
