Add missing OrbitalDefense tag

--- a/pa/units/l_addon/anti_orbital_armor/lynx.json
+++ b/pa/units/l_addon/anti_orbital_armor/lynx.json
@@ -11,6 +11,7 @@
     "UNITTYPE_Vehicle",
     "UNITTYPE_Mobile",
     "UNITTYPE_AirDefense",
+    "UNITTYPE_OrbitalDefense",
     "UNITTYPE_Land",
     "UNITTYPE_Basic",
     "UNITTYPE_FactoryBuild",
