--- a/pa/units/l_addon/anti_orbital_armor/lynx.json
+++ b/pa/units/l_addon/anti_orbital_armor/lynx.json
@@ -2,6 +2,7 @@
   "base_spec": "/pa/units/land/base_vehicle/base_vehicle.json",
   "display_name": "Lynx",
   "si_name": "l_lynx",
+  "strategic_icon_priority": 2,
   "description": "!LOC:Mobile missile launcher - Equipped with homing missiles. Only attacks air and Orbital.",
   "max_health": 300,
   "build_metal_cost": 500,
