--- a/pa/units/l_addon/anti_orbital_armor/lynx_weapon.json
+++ b/pa/units/l_addon/anti_orbital_armor/lynx_weapon.json
@@ -2,17 +2,20 @@
   "base_spec": "/pa/tools/base_missile_turret/base_missile_turret.json",
   "ammo_id": "/pa/units/l_addon/anti_orbital_armor/lynx_ammo.json",
   "ammo_source": "time",
-  "ammo_capacity": 4,
+  "ammo_capacity": 3,
   "ammo_demand": 1,
   "ammo_per_shot": 1,
   "carpet_fire": true,
   "carpet_wait_for_full_ammo": true,
-  "rate_of_fire": 4.0,
-  "max_range": 180,
-  "yaw_rate": 3600,
-  "pitch_rate": 3600,
-  "yaw_range": 180,
-  "pitch_range": 85,
+  "rate_of_fire": 10.0,
+  "max_range": 200,
+  "yaw_rate": 180,
+  "pitch_rate": 180,
+  "yaw_range": 0,
+  "pitch_range": 0,
+  "firing_arc_yaw": 180,
+  "firing_arc_pitch": 180,
+  "firing_standard_deviation": 20,
   "auto_attack": true,
   "spread_fire": true,
   "target_layers": ["WL_Air", "Orbital"]
